--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
     "@reduxjs/toolkit": "^1.8.5",
     "expo": "~46.0.13",
     "expo-font": "~10.2.0",
@@ -19,6 +21,7 @@
     "react-native-maps": "0.31.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "~3.15.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.4"
