--- a/package.json
+++ b/package.json
@@ -8,13 +8,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
+    "expo-font": "~10.2.0",
+    "expo-location": "~14.3.0",
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-maps": "0.31.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.7",
+    "react-redux": "^8.0.4",
     "expo-splash-screen": "~0.16.2",
-    "react-dom": "18.0.0",
-    "react-native-web": "~0.18.7"
+    "react-dom": "18.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
