--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-font": "~10.2.0",
     "expo-location": "~14.3.0",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.6",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-maps": "0.31.1",
