--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "ios2": "react-native run-ios --configuration Release --device='Omkar’s iPhone'",
+    "ios3": "react-native run-ios --configuration Release"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
